# x86_64_compiler

./: .clang-tidy  .gitignore  README.md
src/: CMakeLists.txt  abcd  ast  ast.txt  binary_to_delete  chat.s  codegen.c  codegen.h  gcc_intermediate_representation.gimple  lexer.c  lexer.h  main.c  parser.c  parser.h  run.sh  test  test.txt  tokens
test/: CMakeLists.txt  test_codegen.c  test_compiler.c  test_lexer.c  test_parser.c
test/test_expected_ouputs/: simple_return.s
test/test_expected_outputs/: binary_add.s  func_params_call.s  mul_return.s  simple_return.s  three_params_call.s  var_decl_return.s
test/test_inputs/codegen_inputs/: binary_return.txt  decl_and_return.c  division.c  func_call.txt  func_call_no_args.c  multiple_func.c  multiply.c
test/test_inputs/compiler_inputs/: binary_add.c  func_params_call.c  mul_return.c  three_params_call.c
test/test_inputs/lexer_inputs/: comment_skipping.txt  compound_operators.txt  identifier.txt  if_whitespace.txt  keyword_pre_id.txt  multiline.txt  multiple_com_tok.txt  not_equals.txt
test/test_inputs/parser_inputs/: assign_and_return.c  complex_main.txt  func_params.c  while_loop.c
